--- a/medical_office_manager/templates/registration/logged_out.html
+++ b/medical_office_manager/templates/registration/logged_out.html
@@ -21,7 +21,7 @@
     <div class="container-fluid text-center display:block">
         <p><strong>Você foi desconectado!</strong></p>
 
-        <button onclick="window.location='{% url 'login'%}'" >Clique aqui para entrar</button>
+        <button id="loginRedirectionButton" onclick="window.location='{% url 'login'%}'" >Clique aqui para entrar</button>
     </div>
 
 </body>
