--- a/medical_office_manager/templates/registration/login.html
+++ b/medical_office_manager/templates/registration/login.html
@@ -59,10 +59,17 @@
         <br><br>
 
         &emsp;&emsp;&emsp;&emsp;
-        <button type="submit">Entrar</button>
+        <button id="loginButton"  type="submit">Entrar</button>
 
         &emsp;&emsp;
         <button type="submit" onclick="window.location.href='/accounts/login/'; return false;" >Cancelar</button>
+        
+        <br><br><br><br>
+        &emsp;&emsp;
+        Não tem cadastro?
+        <br><br>
+        &emsp;&emsp;
+        <button type="submit" onclick="window.location='{% url 'office:register_user'%}'; return false;" >Cadastrar</button>
 
         <input type="hidden" name='next' value= "{{next}}">
     </div>
