--- a/medical_office_manager/office/templates/office/base_doctor.html
+++ b/medical_office_manager/office/templates/office/base_doctor.html
@@ -26,7 +26,7 @@
                 <a class="nav-link active" aria-current="page" href="{% url 'office:home_doctor' %} " style = "color: grey"><b>Início</b></a>
               </li>&emsp;&emsp;
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'office:list_patients_doctor' %}" style = "color: grey"><b>Listar Pacientes</b></a>
+                <a id="listPatients" class="nav-link" href="{% url 'office:list_patients_doctor' %}" style = "color: grey"><b>Listar Pacientes</b></a>
               </li>&emsp;&emsp;
               <li class="nav-item" >
                 {% now "Y-m-d" as current_date%}
