--- a/medical_office_manager/office/templates/office/appointments_list_assistant.html
+++ b/medical_office_manager/office/templates/office/appointments_list_assistant.html
@@ -29,10 +29,10 @@
                     {% now "Y-m-d" as current_date%}
                     <form action = '{% url 'office:appointments_list_assistant' date=current_date%}' method="POST">
                         {% csrf_token %}
-                    <input type="date" name="appointment_date" value = "{{date_default}}">
+                    <input id="inputDataConsultas" type="date" name="appointment_date" value = "{{date_default}}">
                     <br><br>
                     
-                    <button type="submit">Buscar</button>
+                    <button id="btBuscarDataConsultas" type="submit">Buscar</button>
                     </form>
                 </td>
 
