--- a/medical_office_manager/office/templates/office/appointments_list_doctor.html
+++ b/medical_office_manager/office/templates/office/appointments_list_doctor.html
@@ -29,9 +29,9 @@
                     {% now "Y-m-d" as current_date%}
                     <form action = '{% url 'office:appointments_list_doctor' date=current_date%}' method="POST">
                         {% csrf_token %}
-                        <input type="date" name="appointment_date" value = "{{date_default}}">
+                        <input id="inputDataConsultas" type="date" name="appointment_date" value = "{{date_default}}">
                         <br><br>
-                        <button type="submit">Buscar</button>
+                        <button id="btBuscarDataConsultas" type="submit">Buscar</button>
                     </form>
                 </td>
 
