--- a/medical_office_manager/office/templates/office/schedule_appointment.html
+++ b/medical_office_manager/office/templates/office/schedule_appointment.html
@@ -29,7 +29,7 @@
         </select>
         
         <br><br>
-        <button type="submit" style="width:110px">Confirmar</button>
+        <button id="btConfirm_selected_patient"type="submit" style="width:110px">Confirmar</button>
         
         &emsp;&emsp;
 
