--- a/medical_office_manager/office/templates/office/patient_details_doctor.html
+++ b/medical_office_manager/office/templates/office/patient_details_doctor.html
@@ -24,7 +24,7 @@
 
     &emsp;&emsp;
     
-    <button type="submit" onclick="window.location='{% url 'office:list_patients_doctor'%}'; return false;" >Voltar</button>
+    <button type="submit" onclick="window.location='{% url 'office:list_patients_doctor'%}'; return false;" >Ir para lista de pacientes</button>
 </div>
 
 {% endblock %}
