adicionado caso de teste ao 'ver prontuário'

--- a/medical_office_manager/office/templates/office/patient_medical_record.html
+++ b/medical_office_manager/office/templates/office/patient_medical_record.html
@@ -17,11 +17,11 @@
     <br>
 </div>
      
-<div class="container-fluid">
+<div id="medicalRecordContent" class="container-fluid">
     <br><br>
     {%for medical_record_entry in medical_record_entries%}
         <tr>
-            &emsp;&emsp;<strong>{{medical_record_entry.appointment.date}}</strong>
+            &emsp;&emsp;<strong>Data da consulta: {{medical_record_entry.appointment.date}}</strong>
             <br>
             &emsp;&emsp;{{medical_record_entry.content}}
         </tr>
