adicionado teste para desmarcação de consulta

--- a/medical_office_manager/office/templates/office/appointments_list_assistant.html
+++ b/medical_office_manager/office/templates/office/appointments_list_assistant.html
@@ -44,7 +44,11 @@
                         </tr>
                         <tr>
                             <th>Horários</th>
-                            <th>Paciente</th>
+                            <th>  
+                                <ul>
+                                    <li style = "list-style-type: none">Paciente</li>
+                                <ul>
+                            </th>
                             <th></th>
                         </tr>
                        
