--- a/medical_office_manager/office/templates/office/unschedule_appointment.html
+++ b/medical_office_manager/office/templates/office/unschedule_appointment.html
@@ -23,7 +23,7 @@
         
         
         <br><br>
-        <button onclick="window.location='{% url 'office:unschedule_appointment_successfully' appointment_id=appointment.id  %}'; return false;" style="width:110px">Confirmar</button>
+        <button id="btConfirm" onclick="window.location='{% url 'office:unschedule_appointment_successfully' appointment_id=appointment.id  %}'; return false;" style="width:110px">Confirmar</button>
         
         &emsp;&emsp;
 
