--- a/medical_office_manager/office/templates/office/appointments_list_assistant.html
+++ b/medical_office_manager/office/templates/office/appointments_list_assistant.html
@@ -88,6 +88,19 @@
     </div>
 </div>
 
+<script>
+    var date = new Date();
 
+    const recifeTime = date.toLocaleString("en-US", {timeZone: "America/Recife"});
+
+    const dateCompleteParts = recifeTime.split(",");
+    const dateParts = dateCompleteParts[0].split("/");
+
+    const dia = dateParts[1].padStart(2,'0');
+    const mes = dateParts[0].padStart(2,'0');
+    const ano = dateParts[2];
+
+    const currentDateUTC3 = `${ano}-${mes}-${dia}`;
+</script>
 
 {% endblock %}
