--- a/medical_office_manager/office/templates/office/register_user.html
+++ b/medical_office_manager/office/templates/office/register_user.html
@@ -1,9 +1,12 @@
-<html lang="en">
+{% load static%}
+
+<!doctype html>
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="{% static 'geral/img/logo_black.png' %}" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
     <title>Medical Office</title>
 </head>
@@ -11,6 +14,7 @@
     
     <nav class="navbar-header py-3" style="background-color:#ff670f; ">
         <div class="container-fluid text-center display:block">
+            <img class="logo" src="{% static 'geral/img/logo_white.png' %}" style="height: 30px; width: 80px; max-width: fit-content;">
             <span class="navbar-brand mb-0 h1" style = "color: white">
                 <h1>MEDICAL OFFICE</h1>
             </span>
@@ -79,5 +83,7 @@
         </div>     
     </form>
 
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
