--- a/medical_office_manager/templates/404.html
+++ b/medical_office_manager/templates/404.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" href="{% static 'geral/img/logo_black.png' %}" type="image/x-icon">
+  <link rel="shortcut icon" href="{% static 'img/logoblack.png' %}" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     
     <title>Medical Office</title>
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar-header py-3" style="background-color:#ff670f; ">
         <div class="container-fluid text-center display:block">
-          <img class="logo" src="{% static 'geral/img/logo_white.png' %}" style="height: 30px; width: 80px; max-width: fit-content;">
+          <img class="logo" src="{% static 'img/logowhite.png' %}" style="height: 30px; width: 80px; max-width: fit-content;">
             <span class="navbar-brand mb-0 h1" style = "color: white">
                 <h1>MEDICAL OFFICE</h1>
             </span>
