--- a/medical_office_manager/office/templates/office/display_appointment_details.html
+++ b/medical_office_manager/office/templates/office/display_appointment_details.html
@@ -32,6 +32,7 @@
     <br>
 
     <section style = "box-shadow: 1px 1px 5px 1px rgba(243, 123, 10, 0.94)">
+        <p> <strong>Entrada de prontuário</strong></p>
         {%if medical_record_entry|length == 0 %}
             <form action = '{% url 'office:display_appointment_details' appointment_id=appointment.id%}' method="POST">
                 {% csrf_token %}
@@ -48,9 +49,7 @@
 
     <br><br>
 
-    <table>
-        <tr>
-            <td style = "border: none; justify-content: center; text-align: center; align-items: center;">
+
                 <section style = "box-shadow: 1px 1px 5px 1px rgba(243, 123, 10, 0.94)">
                     <form action = '{% url 'office:add_document_to_appointment' appointment_id=appointment.id%}' method="POST" enctype="multipart/form-data">
                         {% csrf_token %}
@@ -61,23 +60,22 @@
                         <input type="file" id="ipt_add_document_to_appointment" name="ipt_add_document_to_appointment">
                         <br><br>
                         <button id="btAdicionar" type="submit">Adicionar</button>
+                        <br>
+                        <p> <br></p>
                     </form>
                 </section>
-            </td>
-            
-            <td style = "border: none; horizontal-align: text-center">
+
                 <section style = "box-shadow: 1px 1px 5px 1px rgba(243, 123, 10, 0.94)">
                     <p> <strong>Documentos</strong></p>
                     
                     <ul>
                     {% for documento in documentos%}
-                    <li><a style = "text-decoration:none; color: black" href="{{documento.documento_location.url}}">{{documento.titulo}}</a></li>
+                    <a style = "text-decoration:none; color: black" href="{{documento.documento_location.url}}"><strong>-</strong> {{documento.titulo}}</a>
+                    <br>
                     {% endfor %}
                 </ul>
                 </section>
-            </td>
-        </tr>
-    </table>
+
 
     <br><br>
     <button onclick="window.location='{% url 'office:appointments_list_doctor' date=appointment.date%}'; return false;" >Voltar para visualização de consultas</button>
