trocando datetime.today() por timezone.localdate() + updating existing tests

--- a/medical_office_manager/office/templates/office/patient_medical_record.html
+++ b/medical_office_manager/office/templates/office/patient_medical_record.html
@@ -25,7 +25,7 @@
 
                 &emsp;&emsp;<strong>Data da consulta: {{appointment_data.0.date}}</strong>
                 <br>
-                &emsp;&emsp;{{appointment_data.1}}
+                &emsp;&emsp;<div id="medicalRecordRealContent">{{appointment_data.1}}</div>
                 <br>
                 &emsp;&emsp;&emsp;&emsp;
                 
