--- a/medical_office_manager/office/templates/office/register_patient.html
+++ b/medical_office_manager/office/templates/office/register_patient.html
@@ -52,7 +52,7 @@
     </div>
 </form>
 
-<!-- Máscaranos inputs: usar jquery  + atributo data-mask = "máscara definida" 
+<!-- Mascarar inputs: usar jquery  + atributo data-mask = "máscara definida" 
      (ex: <input type="text" data-mask="(00)0000-0000">)
      Organiza no formato da máscara ao digitar no teclado ou ao colar um cpf/telefone
 -->
