deletando documentos previamente adicionados a uma consulta

--- a/medical_office_manager/office/templates/office/display_appointment_details.html
+++ b/medical_office_manager/office/templates/office/display_appointment_details.html
@@ -90,8 +90,14 @@
         
         <ul>
         {% for documento in documentos%}
-        <a style = "text-decoration:none; color: black" href="{{documento.documento_location.url}}"><strong>-</strong> {{documento.titulo}}</a>
-        <br>
+            <a style = "text-decoration:none; color: black" href="{{documento.documento_location.url}}"><strong>-</strong> {{documento.titulo}}</a>
+
+            <form action='{% url 'office:delete_document_from_appointment' appointment.id documento.id%}' method="POST">
+                {% csrf_token %}
+                <button type="submit" class="btn btn-danger btn-sm">Deletar</button>
+            </form>
+
+            <br>
         {% endfor %}
     </ul>
     </section>
