--- a/medical_office_manager/office/templates/office/display_appointment_details.html
+++ b/medical_office_manager/office/templates/office/display_appointment_details.html
@@ -90,14 +90,30 @@
         
         <ul>
         {% for documento in documentos%}
-            <a style = "text-decoration:none; color: black" href="{{documento.documento_location.url}}"><strong>-</strong> {{documento.titulo}}</a>
-
-            <form action='{% url 'office:delete_document_from_appointment' appointment.id documento.id%}' method="POST">
+            <a id="documento_titulo" style = "text-decoration:none; color: black" href="{{documento.documento_location.url}}"><strong>-</strong> {{documento.titulo}}</a>
+            <br><br>
+            <form id="form_deletar_documento"  method="POST">
                 {% csrf_token %}
-                <button type="submit" class="btn btn-danger btn-sm">Deletar</button>
+                <button type="submit" id="bt_deletar" class="btn btn-danger btn-sm" onclick="funcao1();">Deletar</button>
             </form>
 
             <br>
+
+            <script>
+                function funcao1()
+                {
+                
+                var r=confirm("Tem certeza que deseja apagar esse documento?");
+                if (r==true)
+                  {
+                    document.getElementById("form_deletar_documento").setAttribute("action", "/office/delete_document_from_appointment/{{appointment.id}}/{{documento.id}}/");
+                  }
+                else
+                  {
+                    document.getElementById("form_deletar_documento").setAttribute("action", "/office/display_appointment_details/{{appointment.id}}/");
+                  }
+                }
+                </script>
         {% endfor %}
     </ul>
     </section>
@@ -113,5 +129,7 @@
 
     <br><br>
 </div>
+
+
 
 {% endblock %}
