--- a/medical_office_manager/office/templates/office/display_appointment_details.html
+++ b/medical_office_manager/office/templates/office/display_appointment_details.html
@@ -94,9 +94,13 @@
             <a id="documento_titulo" style = "text-decoration:none; color: black" href="{{documento.documento_location.url}}"><strong>-</strong> {{documento.titulo}}</a>
             <br>
 
-            <button onclick="window.location='{% url 'office:delete_document_from_appointment' appointment.id documento.id%}'; return false;" >Deletar</button>
+            <form id="form_deletar_documento" action='{% url 'office:confirm_delete_document_from_appointment' appointment.id documento.id%}' method="POST" onsubmit="return confirm('Tem certeza que deseja deletar esse documento?');">
+              {% csrf_token %}
+              
+              <button type="submit" id="bt_deletar" class="btn btn-danger btn-sm" data-bs-dismiss="modal" >Deletar</button>
+          </form>
          
-            <br><br>
+            <br>
 
         {% endfor %}
 
@@ -104,6 +108,13 @@
     
 
     </section>
+
+    <script>
+        function submitForm() {
+            
+            return confirm('Do you really want to submit the form?');
+        }
+    </script>
 
     <hr>
     <br><br>
